CostalCloud/force-app/main/default/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Email__c</fullName>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Id_18__c</fullName>
        <description>This formula will always evaluate to the 18 character case safe Salesforce Id. It should be used for integrations and data loads. Include this Id field on reports if those reports will be used for mass data updates.</description>
        <formula>CaseSafeId( Id )</formula>
        <inlineHelpText>Include this Id field on reports if those reports will be used for mass data updates.</inlineHelpText>
        <label>Account Id (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <description>Account Name (standard field) should always be the formal, legal name of the Account.  However, this can sometimes be long and not useful for email templates and reporting.  If this field is to be used, it MUST be a REQUIRED field on all Account Page Layouts.</description>
        <inlineHelpText>Short version of the formal, legal name of the Account</inlineHelpText>
        <label>Account Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Liability_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Liability Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Badge_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Badge Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_Firm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_Renovator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Renovator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_Contractor_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>City Contractor License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Division_Number__c</fullName>
        <formula>Client_Market__r.Client_Division_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Division Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Division__c</fullName>
        <formula>TEXT(Client_Market__r.Client_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Market_ID_18__c</fullName>
        <formula>Client_Market__r.Client_Market_ID_18__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Market ID(18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Market_Number__c</fullName>
        <formula>Client_Market__r.Market_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Market Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Market</label>
        <referenceTo>Client_Market__c</referenceTo>
        <relationshipLabel>Client Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Region__c</fullName>
        <formula>TEXT( Client_Market__r.Client_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Status__c</fullName>
        <formula>IF( ISPICKVAL(  Expired_Licenses__c  , &quot;No&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;), 
IF( ISPICKVAL(Expired_Licenses__c , &quot;Yes&quot;), IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;), 
null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Contractor_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>County Contractor License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_from_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created from Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerUniqueID__c</fullName>
        <externalId>true</externalId>
        <label>CustomerUniqueID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Days_to_Onboard__c</fullName>
        <formula>Onboarding_Date__c  -  DATEVALUE(CreatedDate)</formula>
        <label>Days to Onboard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Connect_Email__c</fullName>
        <label>Design Connect Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Direct_Deposit_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Deposit Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Admin_Kitchen__c</fullName>
        <formula>Reporting_Market__r.Division_Admin_Kitchen__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division Admin Kitchen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Admin__c</fullName>
        <formula>Reporting_Market__r.Division_Admin__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division Admin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Director_Kitchen__c</fullName>
        <formula>Reporting_Market__r.Division_Director_Kitchen__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division Director Kitchen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Director__c</fullName>
        <formula>Reporting_Market__r.Division_Director__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(Reporting_Market__r.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_License_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver License Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <description>Used in Reporting to allow an Edit directly from the Report</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e?&quot;, &quot;Edit&quot;)</formula>
        <inlineHelpText>Used in Reporting to allow an Edit directly from the Report</inlineHelpText>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_License_Kitchens__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical License (Kitchens)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired_Licenses__c</fullName>
        <label>Expired Licenses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Manager_Kitchen__c</fullName>
        <formula>Reporting_Market__r.Field_Manager_Kitchen__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Manager Kitchen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Manager__c</fullName>
        <formula>Reporting_Market__r.Field_Manager__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Liability_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Liability Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IRS_W9__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IRS W9</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactivation_Date__c</fullName>
        <label>Inactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive_Status_Notes__c</fullName>
        <inlineHelpText>Short reason of why account is inactive (date will also be required)</inlineHelpText>
        <label>Inactive Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Key_Account__c</fullName>
        <description>Integration ID / Key used to uniquely connect Salesforce.com to another system (e.g. ERP Financial system)</description>
        <externalId>true</externalId>
        <inlineHelpText>Integration ID / Key used to uniquely connect Salesforce.com to Intact/ERP</inlineHelpText>
        <label>Integration Key (Account)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Issue_with_Auto_Liability_Insurance__c</fullName>
        <label>Issue with Auto Liability Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_Badge_Photo__c</fullName>
        <label>Issue with Badge Photo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_Certified_Firm__c</fullName>
        <label>Issue with Certified Firm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_Certified_Renovator__c</fullName>
        <label>Issue with Certified Renovator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_City_Contractor_License__c</fullName>
        <label>Issue with City Contractor License</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_County_Contractor_License__c</fullName>
        <label>Issue with County Contractor License</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_Direct_Deposit_Authorization__c</fullName>
        <label>Issue with Direct Deposit Authorization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_Driver_License_Documentation__c</fullName>
        <label>Issue with Driver License Documentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_Electrical_License_Kitchens__c</fullName>
        <label>Issue with Electrical License (Kitchens)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_General_Liability_Insurance__c</fullName>
        <label>Issue with General Liability Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_IRS_W9__c</fullName>
        <label>Issue with IRS W9</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_Percentage_Agreement__c</fullName>
        <label>Issue with Percentage Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_Plumbing_License_Kitchens__c</fullName>
        <label>Issue with Plumbing License (Kitchens)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_SSN_Documentation__c</fullName>
        <label>Issue with SSN Documentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_Services_Agreement__c</fullName>
        <label>Issue with Services Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_State_Contractor_License__c</fullName>
        <label>Issue with State Contractor License</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_Voided_Check__c</fullName>
        <label>Issue with Voided Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_with_Workers_Comp_Documentation__c</fullName>
        <label>Issue with Workers Comp Documentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID_Account__c</fullName>
        <description>Legacy ID / Key used to connect Salesforce.com to the system to which data initially originated - Used for a system that are no longer going to be used</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy ID / Key used to connect Salesforce.com to the system to which data initially originated</inlineHelpText>
        <label>Legacy ID (Account)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License_Link__c</fullName>
        <label>License Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Note_Auto_Liability_Insurance__c</fullName>
        <label>Note Auto Liability Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Badge_Photo__c</fullName>
        <label>Note Badge Photo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Certified_Firm__c</fullName>
        <label>Note Certified Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Certified_Renovator__c</fullName>
        <label>Note Certified Renovator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_City_Contractor_License__c</fullName>
        <label>Note City Contractor License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_County_Contractor_License__c</fullName>
        <label>Note County Contractor License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Direct_Deposit_Authorization__c</fullName>
        <label>Note Direct Deposit Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Driver_License_Documentation__c</fullName>
        <label>Note Driver License Documentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Electrical_License_Kitchens__c</fullName>
        <label>Note Electrical License (Kitchens)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_General_Liability_Insurance__c</fullName>
        <label>Note General Liability Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_IRS_W9__c</fullName>
        <label>Note IRS W9</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Percentage_Agreement__c</fullName>
        <label>Note Percentage Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Plumbing_License_Kitchens__c</fullName>
        <label>Note Plumbing License (Kitchens)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_SSN_Documentation__c</fullName>
        <label>Note SSN Documentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Services_Agreement__c</fullName>
        <label>Note Services Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_State_Contractor_License__c</fullName>
        <label>Note State Contractor License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Voided_Check__c</fullName>
        <label>Note Voided Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Workers_Comp_Documentation__c</fullName>
        <label>Note Workers Comp Documentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboarding_Date__c</fullName>
        <label>Onboarding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_ID_Legacy__c</fullName>
        <label>Parent ID (Legacy)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Percentage Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plumbing_License_Kitchens__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plumbing License (Kitchens)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>IF ( INCLUDES ( Reporting_Market__r.Program__c  , &quot;Core&quot; ), &quot;Core; &quot;,null ) &amp;
IF ( INCLUDES ( Reporting_Market__r.Program__c  , &quot;Kitchens&quot; ), &quot;Kitchens; &quot;,null ) &amp;
IF ( INCLUDES ( Reporting_Market__r.Program__c , &quot;TCS&quot; ), &quot;TCS; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Reporting_Market_ID_18__c</fullName>
        <formula>Reporting_Market__r.Reporting_Market_ID_18__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFI Reporting Market ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Auto_Liability_Insurance__c</fullName>
        <label>Received Auto Liability Insurance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Badge_Photo__c</fullName>
        <label>Received Badge Photo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Certified_Firm__c</fullName>
        <label>Received Certified Firm</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Certified_Renovator__c</fullName>
        <label>Received Certified Renovator</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_City_Contractor_License__c</fullName>
        <label>Received City Contractor License</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_County_Contractor_License__c</fullName>
        <label>Received County Contractor License</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Direct_Deposit_Authorization__c</fullName>
        <label>Received Direct Deposit Authorization</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Driver_License_Documentation__c</fullName>
        <label>Received Driver License Documentation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Electrical_License_Kitchens__c</fullName>
        <label>Received Electrical License (Kitchens)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_General_Liability_Insurance__c</fullName>
        <label>Received General Liability Insurance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_IRS_W9__c</fullName>
        <label>Received IRS W9</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Percentage_Agreement__c</fullName>
        <label>Received Percentage Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Plumbing_License_Kitchens__c</fullName>
        <label>Received Plumbing License (Kitchens)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_SSN_Documentation__c</fullName>
        <label>Received SSN Documentation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Services_Agreement__c</fullName>
        <label>Received Services Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_State_Contractor_License__c</fullName>
        <label>Received State Contractor License</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Voided_Check__c</fullName>
        <label>Received Voided Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Workers_Comp_Documentation__c</fullName>
        <label>Received Workers Comp Documentation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Reporting_Market__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Admin__c</fullName>
        <formula>Reporting_Market__r.Regional_Admin__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Admin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <formula>Reporting_Market__r.Regional_Manager__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Market</label>
        <referenceTo>RFI_Reporting_Markets__c</referenceTo>
        <relationshipLabel>Client Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSN_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSN Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Territory_ID_18__c</fullName>
        <formula>Service_Territory__r.Service_Territory_ID_18__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Territory ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Before activating an Installer Portal Account make sure that they have their own Service Territory setup and that all resources have been linked to the same territory.</inlineHelpText>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Installer Account Record</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Contractor_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Contractor License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-boarding</fullName>
                </value>
                <value>
                    <fullName>60 day hold</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store_Kitchen_Designer_Email__c</fullName>
        <label>Store Kitchen Designer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Store_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <externalId>true</externalId>
        <label>Store #</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Account__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Used ONLY in Reporting - For each Account it will default to &quot;1&quot; for the purpose of Summing Accounts.  This can be done organically within Salesforce except when you the Report is attempting to Sum TWO Objects (# of Accounts AND # of Contacts) of which &quot;Record Count&quot; only allows ONE to be Summed.</description>
        <inlineHelpText>Used ONLY in Reporting - For each Account it will default to &quot;1&quot; for the purpose of Summing Accounts.  When the Report is attempting to Sum TWO Objects (# of Accounts AND # of Contacts) of which &quot;Record Count&quot; only allows ONE to be Summed.</inlineHelpText>
        <label>Unit (Account)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voided_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voided Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workers_Comp_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workers Comp Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ia_crm__Balance__c</fullName>
        <label>Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ia_crm__Bill_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For Standard/Direct business leave the field blank.
For Reseller business, populate this with Reseller Account. The field gets defaulted on the Opportunities when creating them from the &apos;Create Contract Opportunity&apos; or &apos;Create Sales Opportunity&apos; buttons.</inlineHelpText>
        <label>Bill to Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 4) OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>Account.ia_crm__Reseller_Type__c</field>
                <operation>contains</operation>
                <valueField>Account.Type</valueField>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Channel Partner / Reseller</value>
            </filterItems>
            <filterItems>
                <field>Account.ia_crm__Reseller_Type__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ia_crm__Bill_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>BilltoContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ia_crm__Corp_Currency_Balance__c</fullName>
        <label>Corp Currency Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ia_crm__Credit_limit__c</fullName>
        <label>Credit limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ia_crm__Email_ID__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ia_crm__IntacctID__c</fullName>
        <label>Intacct Customer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ia_crm__Intacct_Entity_Id__c</fullName>
        <description>Formula field used to avoid making a separate query to get the entity id at sync.</description>
        <formula>IF( ISPICKVAL( ia_crm__Intacct_Entity__r.ia_crm__Entity_Type__c , &apos;Entity&apos;),  ia_crm__Intacct_Entity__r.ia_crm__Intacct_Entity_ID__c , &apos;&apos;)</formula>
        <label>Intacct Entity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ia_crm__Intacct_Entity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Only for M-console</description>
        <label>Intacct Entity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <filterItems>
                <field>ia_crm__Intacct_Entity__c.ia_crm__Entity_Type__c</field>
                <operation>equals</operation>
                <value>Entity</value>
            </filterItems>
            <filterItems>
                <field>ia_crm__Intacct_Entity__c.ia_crm__Entity_Type__c</field>
                <operation>equals</operation>
                <value>Top Level</value>
            </filterItems>
            <filterItems>
                <field>ia_crm__Intacct_Entity__c.ia_crm__Hidden__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ia_crm__Intacct_Entity__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ia_crm__Intacct_Sync_Errors__c</fullName>
        <label>Intacct Sync Errors</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ia_crm__Intacct_Sync_Status_Image__c</fullName>
        <formula>CASE( ia_crm__Intacct_Sync_Status__c , &quot;OK&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;OK&quot;), &quot;Error&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Error&quot;), &quot;Warning&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Warning&quot;), TEXT(ia_crm__Intacct_Sync_Status__c))</formula>
        <label>Intacct Sync Status</label>
        <type>Text</type>
    </fields>
</CustomObject>